FlaskApp/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: flask
